--- a/yatube/templates/includes/author.html
+++ b/yatube/templates/includes/author.html
@@ -18,6 +18,28 @@
         <div class="h6 text-muted"> 
           Записей: {{author.posts.count}} 
         </div> 
+        {% if user.is_authenticated %}
+  <div class="row my-3">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a 
+          class="nav-link {% if index %}active{% endif %}"
+          href="{% url 'index' %}"
+        >
+          Все авторы
+        </a>
+      </li>
+      <li class="nav-item">
+        <a 
+           class="nav-link {% if follow %}active{% endif %}"
+           href="{% url 'follow_index' %}"
+        >
+          Избранные авторы
+        </a>
+      </li>
+    </ul>
+  </div>
+{% endif %}
       </li> 
     </ul> 
   </div>
