--- a/yatube/templates/profile.html
+++ b/yatube/templates/profile.html
@@ -5,12 +5,31 @@
     <div class="col-md-3 mb-3 mt-1">  
       {% include "includes/author.html" %}
     </div> 
-    <div class="col-md-9"> 
+    <div class="col-md-9">
+      <div class="mb-5">
+        <h1>Все посты пользователя {{ author.get_full_name }}</h1>
+        <h3>Всего постов: {{author.posts.count}}</h3>
+        {% if following %}
+          <a
+            class="btn btn-lg btn-light"
+            href="{% url 'profile_unfollow' author.username %}" role="button"
+          >
+            Отписаться
+          </a>
+        {% else %}
+            <a
+              class="btn btn-lg btn-primary"
+              href="{% url 'profile_follow' author.username %}" role="button"
+            >
+              Подписаться
+            </a>
+         {% endif %}
+      </div>  
       {% for post in page %}  
       {% include "includes/post_card.html" %}
       {% endfor %}  
       {% include "includes/paginator.html" %} 
-    </div>  
+    </div> 
   </div> 
 </main> 
 {% endblock %}
