--- a/yatube/templates/follow.html
+++ b/yatube/templates/follow.html
@@ -3,7 +3,7 @@
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
     {% include 'includes/switcher.html' %}
-    {% for post in page %}
+    {% for post in page_obj %}
     <h3>
         Автор: <a class='p-2 text-dark' href='/{{ post.author.username }}/'>{{ post.author.get_full_name }}</a>, Дата публикации: {{ post.pub_date|date:"d M Y" }}
     </h3>
