--- a/yatube/templates/includes/comments.html
+++ b/yatube/templates/includes/comments.html
@@ -5,7 +5,7 @@
   <div class="card my-4">
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
-      <form method="post" action="{% url 'add_comment' post.author.username post.id %}">
+      <form method="post" action="{% url 'add_comment' post.id %}">
         {% csrf_token %}      
         <div class="form-group mb-2">
           {{ form.text|addclass:"form-control" }}
