--- a/yatube/templates/includes/paginator.html
+++ b/yatube/templates/includes/paginator.html
@@ -1,17 +1,17 @@
-{% if page.has_other_pages %}
+{% if page_obj.has_other_pages %}
     <nav>
       <ul class="pagination">
-        {% if page.has_previous %}
+        {% if page_obj.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page.previous_page_number }}">&laquo; Предыдущая</a>
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo; Предыдущая</a>
         </li>
         {% else %}
         <li class="page-item disabled">
           <span class="page-link">&laquo; Предыдущая</span>
         </li>
         {% endif %}
-        {% for i in page.paginator.page_range %}
-        {% if page.number == i %}
+        {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
         <li class="page-item active">
           <span class="page-link">{{ i }}
             <span class="sr-only">(текущая)</span>
@@ -23,9 +23,9 @@
         </li>
         {% endif %}
         {% endfor %}
-        {% if page.has_next %}
+        {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page.next_page_number }}">Следующая &raquo;</a>
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая &raquo;</a>
         </li>
         {% else %}
         <li class="page-item disabled">
