--- a/yatube/templates/index.html
+++ b/yatube/templates/index.html
@@ -5,7 +5,7 @@
     {% include 'includes/switcher.html' %}
     {% for post in page_obj %}
     <h3>
-        Автор: <a class='p-2 text-dark' href='/{{ post.author.username }}/'>{{ post.author.get_full_name }}</a>, Дата публикации: {{ post.pub_date|date:"d M Y" }}
+        Автор: <a class='p-2 text-dark' href='/profile/{{ post.author.username }}/'>{{ post.author.get_full_name }}</a>, Дата публикации: {{ post.pub_date|date:"d M Y" }}
     </h3>
     <p>{{ post.text|linebreaksbr }}</p>
     {% if not forloop.last %}<hr>{% endif %}
